--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -4,6 +4,7 @@ ja:
       is_active:
         release: "公開中"
         in_transaction: "取引中"
+        in_review: "評価中"
         end_transaction: "依頼終了"
         release_stop: "公開停止"
     member:
