--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -12,6 +12,11 @@ ja:
         man: "男性"
         woman: "女性"
         other: "その他"
+    
+    # content:
+    #   reply_status:
+    #     unsupported: "未対応" 
+    #     fixed: "対応済み"
 
 # validateエラーメッセージ request
   activerecord:
